<resources>
    <string-array name="ext_enuText">
        <item>01.出貨相關作業</item>
        <item>02.製令相關作業</item>
        <item>03.收料入庫相關作業</item>
        <item>04.查詢相關作業</item>
        <item>05.標籤列印相關作業</item>
        <item>06.EasyFlow表單相關</item>
        <item>07.SMT相關作業</item>
        <item>08.外包相關作業</item>
        <item>09.Change Organization</item>
        <item>10.登出</item>
        
    </string-array>
    <string-array name="SubMenu1">
        <item>01-01.出貨撿料作業</item>
        <item>01-02.出貨核對作業</item>
        <item>01-03.出貨棧板標籤列印</item>
        <item>01-04.出貨刷退作業</item>
        <item>01-05.條碼驗證作業</item>
        <item>01-06.RMA出貨撿貨作業</item>
        <item>01-07.RMA出貨確認作業</item>
        <item>01-08.Samsara的PO標籤列印</item>
    </string-array>
    <string-array name="SubMenu2">
        <item>02-01.製令入庫作業</item>
        <item>02-02.關帳日期設定</item>
        <item>02-03.製令發料扣帳作業</item>
        <item>02-04.製令發料轉倉作業</item>
        <item>02-05.製令發料檢核作業</item>
        <item>02-06.轉倉轉儲位作業</item>
    </string-array>
    <string-array name="SubMenu3">
        <item>03-01.收料作業</item>
        <item>03-02.外包收料作業</item>
        <item>03-03.驗收入庫作業</item>
        <item>03-04.外包驗收入庫作業</item>
        <item>03-05.驗收入庫批次作業</item>
    </string-array>
    <string-array name="SubMenu4">
        <item>04-01.進貨超交查詢作業</item>
        <item>04-02.庫存查詢作業</item>
        <item>04-03.製令欠料查詢作業</item>
        <item>04-04.PO查詢及列印作業</item>
        <item>04-05.序號狀態查詢作業(OOBA查詢作業)</item>
    </string-array>
    <string-array name="SubMenu5">
        <item>05-01.客供材料進貨標籤列印作業</item>
        <item>05-02.進貨標籤列印作業</item>
        <item>05-03.客供材料拆包作業</item>
        <item>05-04.材料拆包作業</item>
        <item>05-05.客供材料標籤補標作業</item>
        <item>05-06.材料標籤補標作業</item>
        <item>05-07.發票流水號補標作業</item>
        <item>05-08.製令標籤補標作業</item>
        <item>05-09.自訂標籤列印作業</item>
    </string-array>
    <string-array name="SubMenu6">
        <item>06-01.轉倉/呆料責任歸屬單</item>
        <item>06-02.材料耗損</item>
        <item>06-03.一般領(退)料單</item>
        <item>06-04.表單查詢</item>
        <item>06-05.簽核作業</item>
        <item>06-06.轉倉表單觸發作業</item>
        <item>06-07.轉倉表單撤銷作業</item>
        <item>06-08.表單標籤補標作業等作業功能</item>
        <item>06-09.表單作業(領料/退料/調撥/轉倉)</item>
    </string-array>
    <string-array name="SubMenu7">
        <item>07-01.材料拆包作業</item>
        <item>07-02.材料標籤補標作業</item>
        <item>07-03.濕敏元件狀態管制作業</item>
        <item>07-04.烘烤作業</item>
    </string-array>
    <string-array name="SubMenu8">
        <item>08-01.外包材料裝箱作業</item>
        <item>08-02.外包裝箱刷退作業</item>
        <item>08-03.外包出貨撿料作業</item>
        <item>08-04.外包出貨減料刷退作業</item>
        <item>08-05.外包棧板及外箱標籤列印</item>
        <item>08-06.外包收料核對作業</item>
        <item>08-07.外包材料裝箱及出貨撿料離線作業</item>
        <item>08-08.外包裝箱及出貨撿料明細查詢</item>
        <item>08-09.外包裝箱及出貨撿料明細下載</item>
    </string-array>
    <string-array name="SubMenu11">
        <item>11-01.TEST</item>
    </string-array>
    <string name="title_test_name">Test</string>
    <string name="title_test_name_production_line">產線測試用</string>
    <string name="title_test_name2">Test2</string>
    <string name="connect_error">連線發生錯誤</string>
    <string name="db_return_error">伺服器回傳錯誤訊息</string>
    <string name="can_not_connection">無法連線</string>
    <string name="sever_return_info">伺服器回傳資訊</string>
    <string name="title_activity_connection_setting">連線設定</string>
    <string name="search_result">查詢結果</string>
    <string name="search_result1">%1$s 查詢結果</string>
    <string name="action_settings">設定</string>
    <string name="button_return">返回</string>
    <string name="button_confirm2">確認(Okay)</string>
    <string name="button_cancel2">取消(Cancel)</string>
    <string name="btn_ok">確認</string>
    <string name="btn_cancel">取消</string>
    <string name="holdon">請等待...</string>
    <string name="data_reading">資料讀取中...</string>
    <string name="label_printer_info">印表機資訊</string>
    <string name="ok">OK</string>
    <string name="cancel">取消</string>
    <string name="input_printer_id">請輸入印表機IP</string>
    <string name="input_printer_port">請輸入印表機Port</string>
    <string name="input_printer_qty">請輸入數量</string>
    <string name="printingLabel">標籤列印中...</string>
    <string name="cant_conect_printer">無法與印表機連線</string>
    <string name="reprinting_due_to_issue_with_new_label">列印新標籤出現問題，請重新列印</string>
    <string name="reprinting_due_to_issue_with_sub_package_label">列印分包標籤出現問題，請重新列印</string>
    <string name="Print_OK">列印完成</string>
    <string name="printLabalFailed">標籤列印失敗</string>
    <string name="printer_connect_error">印表機連線發生錯誤</string>
    <string name="save_ip_port_qty_error">儲存IP、Port及數量失敗</string>
    <string name="system_error">系統發生錯誤</string>
    <string name="downloading_data">資料下載中</string>
    <string name="print_error">列印出現問題，請重新列印</string>
    <string name="del_data">資料刪除中</string>
    <string name="data_uploading">資料上傳中...</string>
    <string name="data_updated_successfully">資料更新成功</string>
    <string name="data_chking">資料檢查中...</string>
    <string name="data_printing">資料列印中...</string>
    <string name="data_chk_success">資料檢核成功</string>
    <string name="data_printed_successfully">資料列印成功</string>
    <string name="saving_remarks">儲存備註中...</string>
    <string name="saved_successfully">儲存成功</string>
    <string name="pick_printers">PDF417-選擇印表機</string>
    <string name="print_with_codesoft">以codesoft列印</string>
    <string name="print_with_new_type">以新類型列印</string>
    <string name="New_version_uses_WiFi_for_printing">新版走WIFI列印</string>
    <string name="Print_Start">開始列印</string>
    <string name="is_del_data">確定刪除資料?</string>
    <string name="cant_be_null">不得為空值</string>
    <string name="print_chk">列印確認</string>
    <string name="print_error_">藍芽列印失敗，是否重印?</string>
    <string name="error">錯誤</string>
    <string name="PDF417_label_for_Meraki_file_has_been_sent_to_file_server">PDF417 label for Meraki檔案已傳送至file server</string>
    <string name="Pallet_label_for_Tembo_file_has_been_sent_to_file_server">Pallet label for Tembo檔案已傳送至file server</string>
    <string name="label_enter">輸入</string>
    <string name="PDF417_label_for_file_has_been_sent_to_file_server">PDF417 label for 檔案已傳送至file server</string>
    <string name="label_total2">總共</string>
    <string name="label_pages">張</string>
    <string name="wo_chk">製令核對中...</string>
    <string name="verify_data">資料核對中...</string>
    <string name="wareclerk_verify_data">倉管員資料核對中...</string>
    <string name="Merge_code_data_verification">合併碼資料核對中...</string>
    <string name="Checking_line">線別資料核對中...</string>
    <string name="Month_accounting">月份會計期間核對中...</string>
    <string name="Data_debiting_processing">資料扣帳處理中...</string>
    <string name="Debit_processing">扣帳處理中...</string>
    <string name="issue_processing">發料處理中...</string>
    <string name="button_confirm3">確認\n(Confirm)</string>
    <string name="button_cancel3">取消\n(Cancel)</string>
    <string name="button_deduct3">扣帳\n(Deduction)</string>
    <string name="Deduction_completed">已扣帳完畢</string>
    <string name="retrive">收料中...</string>
    <string name="Receiving_processing">收料處理中...</string>
    <string name="Perform_delete">確定執行刪除?</string>
    <string name="choose_u_want_to_del">請先選擇要刪除的項目</string>
    <string name="recorded">入帳處理中...</string>
    <string name="sku_verifying">料號資料核對中...</string>
    <string name="Required">必填</string>
    <string name="choose_printer">請選擇印表機</string>
    <string name="data_setting">資料設定中...</string>
    <string name="button_yes">是(Yes)</string>
    <string name="button_no">否(No)</string>
    <string name="chking_form">核對收料單號中...</string>
    <string name="reading_form_no_data">讀取單號資料中...</string>
    <string name="sn_checking">核對序號中...</string>
    <string name="chk_box_no">核對箱號號中...</string>
    <string name="stock_proccessing">入庫處理中...</string>
    <string name="set_printer_name">請設定印表機名稱</string>
    <string name="open_bt">請開啟藍牙</string>
    <string name="cant_find_printer">找不到配對的印表機，請設定</string>
    <string name="bt_connect_ok">藍芽印表機連線成功</string>
    <string name="not_connect_btprinter">無法與藍芽印表機連線</string>
    <string name="label_printer_ip">印表機IP</string>
    <string name="label_printer_port">印表機Port</string>
    <string name="data_updating">資料更新中...</string>
    <string name="Invoice_checking">檢查發票號碼中...</string>
    <string name="label_login_name"><b>帳號</b></string>
    <string name="label_login_password"><b>密碼</b></string>
    <string name="label_company">公司別</string>
    <string name="label_factory">工廠別</string>
    <string name="label_Language">語系</string>
    <string name="button_login"><b>登入</b></string>
    <string name="button_login_cancel"><b>取消</b></string>
    <string name="label_printer_setting">藍芽印表機設定</string>
    <string name="label_bt_connect">藍芽連線</string>
    <string name="label_bt_disconnect">藍芽斷線</string>
    <string name="change_language">切換英文</string>
    <string name="account_password_is_not_null">登入帳號或密碼不得為空值</string>
    <string name="b_t_error">藍芽設置有問題</string>
    <string name="Disconnected_successfully">斷線成功</string>
    <string name="Failed_to_disconnect">斷線失敗</string>
    <string name="processing">資料處理中...</string>
    <string name="Update">軟體更新</string>
    <string name="New_version">有最新版本</string>
    <string name="do_u_want_to_download">可以更新,是否下載?</string>
    <string name="button_confirm">確定</string>
    <string name="we_need_permission">請給我寫入檔案的權限吧?</string>
    <string name="later">稍後下載</string>
    <string name="file_downloaded">檔案已下載</string>
    <string name="download_error">"下載錯誤: "</string>
    <string name="chk_update">檢查更新檔</string>
    <string name="Logging">登入中</string>
    <string name="download_new_version">下載新版apk中</string>
    <string name="button_connection_setting"><b>連線設定</b></string>
    <string name="set_SFC_IP">請設定 SFC IP</string>
    <string name="set_API_1">請設定 API 1</string>
    <string name="set_API_2">請設定 API 2</string>
    <string name="set_API_3">請設定 API 3</string>
    <string name="label_current_connection">當前連線</string>
    <string name="label_add_connection_settings">新增連線設定</string>
    <string name="label_select_connection_settings">選擇連線設定</string>
    <string name="label_connection_name">連線名稱</string>
    <string name="label_connection_save">保存</string>
    <string name="label_picking">%1$s 出貨檢料作業</string>
    <string name="label_order_status">訂單狀態</string>
    <string name="label_part_no">料號</string>
    <string name="label_checking_quantity">應撿</string>
    <string name="label_box_none_po">不指定PO撿料\n(Not assign po)</string>
    <string name="label_box_po">指定PO撿料\n(Assign po)</string>
    <string name="title_activity_rma_picking">RMA出貨撿貨作業</string>
    <string name="label_material_receiving">收料作業</string>
    <string name="label_mode_selection">選擇作業方式\n(Selection operation mode)</string>
    <string name="label_receipts">收料\n\n(Receipts)\n</string>
    <string name="label_temporarily_receipts">暫收\n\n(Temporarily\nReceipts)</string>
    <string name="label_temporarily_employ">暫收入帳\n\n(Temporarily\nemploy)</string>
    <string name="label_delete">刪除\n\n(Delete)\n</string>
    <string name="label_error">異常\n\n(Error)</string>
    <string name="label_delivery">預交\n\n(Delivery)</string>
    <string name="receiving">收料</string>
    <string name="label_total_qty">全部筆數 %1$d</string>
    <string name="label_select_qty">選擇筆數 %1$d</string>
    <string name="button_select_all">全選</string>
    <string name="button_select_invert">取消全選</string>
    <string name="label_temp_employ">暫收入帳(Temporarily employ)</string>
    <string name="label_pn_vendor">料號 / 廠商</string>
    <string name="button_picking">撿貨\n\n(Picking)</string>
    <string name="button_confirm4">確認\n\n(Confirm)</string>
    <string name="label_transfer_locator_trigger">轉倉表單觸發作業</string>
    <string name="label_select_operation_mode">選擇作業方式\n(select operation mode)</string>
    <string name="button_manual_trigger">手動\n觸發</string>
    <string name="button_detail_pick">明細\n勾選</string>
</resources>