<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    tools:context=".ui.TransferLocatorTriggerActivity">

    <TextView
        android:id="@+id/ap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="#A4C739"
        android:text="@string/label_transfer_locator_trigger"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ap_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/custom_button"
        android:text="@string/button_return"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textview_select_mode"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ap_title"
        android:layout_alignParentLeft="true"
        android:paddingLeft="5dp"
        android:text="@string/label_select_operation_mode"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />


    <LinearLayout
        android:id="@+id/layoutButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_below="@+id/textview_select_mode"
        android:layout_above="@id/label_status"
        android:gravity="center">

        <Button
            android:id="@+id/button_manual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/button_manual_trigger"
            android:textSize="24sp"
            android:textColor="#ffffff" />

        <Button
            android:layout_marginLeft="16dp"
            android:id="@+id/button_pick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/button_detail_pick"
            android:textSize="24sp"
            android:textColor="#ffffff" />

    </LinearLayout>


    <TextView
        android:id="@+id/label_status"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="#A4C739"
        android:clickable="true"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>